@@ -19,6 +19,9 @@ Release 0.12.1 - unreleased
     S2GRAPH-18: Query Option "interval" is Broken. 
                 (Contributed by Hyunsung Jo<hyunsung.jo@gmail.com>, committed by daewon)
 
+    S2GRAPH-20: bug fix in query option "sample".
+                (Contributed by Hyunsung Jo<hyunsung.jo@gmail.com>, committed by DOYUNG YOON)
+                
   TASKS
 
     S2GRAPH-2: Update document and quick start environment to have recent set-up command changes.
